--- a/lru/Cargo.toml
+++ b/lru/Cargo.toml
@@ -3,8 +3,15 @@ name = "lru"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+rand = "0.8.4"
+
 [profile.release]
 debug = 1
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
