--- a/lru/Cargo.toml
+++ b/lru/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 [dependencies]
 rand = "0.8.4"
 
+[rust]
+debuginfo-level = 1
+
 [profile.release]
+lto = true
 debug = 1
 
 [dev-dependencies]
