--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0"
-serde = "1.0.145"
+anyhow = { version = "1.0.52", features = ["backtrace"] }
+serde = "1"
+byteorder="1"
+metrics = "0.20.1"
