--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = { version = "1.0.52", features = ["backtrace"] }
-serde = "1"
-byteorder="1"
-metrics = "0.20.1"
-dashmap="5.4.0"
+byteorder = "1"
+dashmap = "5.4.0"
 tempfile = "3"
+log = "0.4.17"
+
+[profile.test]
+opt-level=3
