--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ dashmap = "5.4.0"
 tempfile = "3"
 log = "0.4.17"
 lru = "0.8.1"
+serde = { version = "1.0.147", features = ["derive"] }
 
 [profile.dev]
 opt-level = 0
