--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ tempfile = "3"
 log = "0.4.17"
 lru = "0.8.1"
 serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
 
 [profile.dev]
 opt-level = 0
