--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,11 @@ log = "0.4.17"
 lru = "0.8.1"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
+simplelog = "0.12.0"
 
 [profile.dev]
-opt-level = 0
-debug = 2
+# opt-level = 0
+# debug = 0
 
 [profile.test]
-opt-level = 3
+# opt-level = 0
