--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ lru = "0.8.1"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 simplelog = "0.12.0"
+rmp-serde = "1.1.1"
 
 [profile.dev]
 # opt-level = 0
