--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 simplelog = "0.12.0"
 rmp-serde = "1.1.1"
+metrics = "0.20.1"
+histogram = "0.6.9"
 
 [profile.dev]
 # opt-level = 0
