--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ rmp-serde = "1.1.1"
 metrics = "0.20.1"
 histogram = "0.6.9"
 
+[rust]
+debuginfo-level = 1
+
 [profile.dev]
 # opt-level = 0
 # debug = 0
