--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ simplelog = "0.12.0"
 rmp-serde = "1.1.1"
 metrics = "0.20.1"
 histogram = "0.6.9"
+crossbeam = "0.8.2"
 
 [rust]
 debuginfo-level = 1
